# poetry-poly-cc

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  build-packages.sh  pyproject.toml  update-locks.sh  workspace.toml
